--- a/Pilot this/Base.lproj/Main.storyboard
+++ b/Pilot this/Base.lproj/Main.storyboard
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="6751" systemVersion="14C1510" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="Bzo-bA-qu8">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="6254" systemVersion="14C109" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="Bzo-bA-qu8">
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="6736"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="6247"/>
         <capability name="Aspect ratio constraints" minToolsVersion="5.1"/>
         <capability name="Constraints to layout margins" minToolsVersion="6.0"/>
     </dependencies>
@@ -50,14 +50,14 @@
                                                                     <rect key="frame" x="0.0" y="0.0" width="600" height="60"/>
                                                                     <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                                                                     <subviews>
-                                                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Product Name" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="C8g-Gk-5hv">
-                                                                            <rect key="frame" x="8" y="15" width="152" height="29"/>
+                                                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Product Name" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" minimumFontSize="15" translatesAutoresizingMaskIntoConstraints="NO" id="C8g-Gk-5hv">
+                                                                            <rect key="frame" x="8" y="15" width="506" height="29"/>
                                                                             <fontDescription key="fontDescription" type="system" pointSize="24"/>
                                                                             <color key="textColor" white="0.0" alpha="0.59999999999999998" colorSpace="calibratedWhite"/>
                                                                             <nil key="highlightedColor"/>
                                                                         </label>
                                                                         <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="20 days" textAlignment="right" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Odc-e6-g8o">
-                                                                            <rect key="frame" x="522" y="19" width="70" height="21"/>
+                                                                            <rect key="frame" x="522" y="19" width="70" height="20.5"/>
                                                                             <constraints>
                                                                                 <constraint firstAttribute="width" relation="greaterThanOrEqual" constant="70" id="HaU-0h-tHl"/>
                                                                                 <constraint firstAttribute="width" constant="70" id="gNx-y8-gx5"/>
@@ -70,6 +70,7 @@
                                                                     <constraints>
                                                                         <constraint firstItem="C8g-Gk-5hv" firstAttribute="leading" secondItem="v7m-lR-chh" secondAttribute="leading" constant="8" id="7aX-W9-buq"/>
                                                                         <constraint firstAttribute="centerY" secondItem="C8g-Gk-5hv" secondAttribute="centerY" id="PJW-qj-tJ4"/>
+                                                                        <constraint firstItem="Odc-e6-g8o" firstAttribute="leading" secondItem="C8g-Gk-5hv" secondAttribute="trailing" constant="8" id="Urg-PE-GcR"/>
                                                                         <constraint firstAttribute="centerY" secondItem="Odc-e6-g8o" secondAttribute="centerY" id="ixw-Md-jDh"/>
                                                                         <constraint firstAttribute="trailing" secondItem="Odc-e6-g8o" secondAttribute="trailing" constant="8" id="wa8-W2-0Lo"/>
                                                                     </constraints>
@@ -290,6 +291,9 @@
                                 </constraints>
                                 <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                 <state key="normal" title="I really need it"/>
+                                <connections>
+                                    <action selector="addAnnotation:" destination="PL4-Nv-KcG" eventType="touchUpInside" id="ZEA-IQ-2xd"/>
+                                </connections>
                             </button>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
