--- a/Pilot this/Base.lproj/Main.storyboard
+++ b/Pilot this/Base.lproj/Main.storyboard
@@ -183,7 +183,7 @@
                                 <rect key="frame" x="0.0" y="295" width="600" height="305"/>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                 <prototypes>
-                                    <tableViewCell contentMode="scaleToFill" selectionStyle="blue" hidesAccessoryWhenEditing="NO" indentationLevel="1" indentationWidth="0.0" reuseIdentifier="CravingCell" rowHeight="92" id="KWr-yO-rqx">
+                                    <tableViewCell contentMode="scaleToFill" selectionStyle="blue" hidesAccessoryWhenEditing="NO" indentationLevel="1" indentationWidth="0.0" reuseIdentifier="AnnotationCell" rowHeight="92" id="KWr-yO-rqx" customClass="AnnotationTableViewCell" customModule="Pilot_this" customModuleProvider="target">
                                         <autoresizingMask key="autoresizingMask"/>
                                         <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="KWr-yO-rqx" id="VOt-o4-Pew">
                                             <autoresizingMask key="autoresizingMask"/>
@@ -259,6 +259,12 @@
                                                 </mask>
                                             </variation>
                                         </tableViewCellContentView>
+                                        <connections>
+                                            <outlet property="comment" destination="xWN-qJ-rMN" id="mLI-D6-1fV"/>
+                                            <outlet property="dateTimeLabel" destination="CFR-F9-i9W" id="RLj-12-BFP"/>
+                                            <outlet property="levelDescription" destination="R9Q-gb-7qH" id="u1G-qL-03Z"/>
+                                            <outlet property="levelLabel" destination="79l-eY-Qm8" id="W1k-pH-kOW"/>
+                                        </connections>
                                     </tableViewCell>
                                 </prototypes>
                                 <sections/>
