--- a/Pilot this/Base.lproj/Main.storyboard
+++ b/Pilot this/Base.lproj/Main.storyboard
@@ -389,56 +389,17 @@
                         <viewControllerLayoutGuide type="bottom" id="Ade-pS-9f3"/>
                     </layoutGuides>
                     <view key="view" contentMode="scaleToFill" id="1kl-y6-Q3R">
-                        <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
+                        <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <imageView userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="image_placeholder.jpg" translatesAutoresizingMaskIntoConstraints="NO" id="d5n-Jd-hFT">
-                                <rect key="frame" x="0.0" y="64" width="320" height="200"/>
+                                <rect key="frame" x="0.0" y="64" width="600" height="200"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="200" id="wXf-Bg-5Qe"/>
                                 </constraints>
                             </imageView>
-                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="QMD-oO-359">
-                                <rect key="frame" x="0.0" y="214" width="320" height="50"/>
-                                <subviews>
-                                    <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" placeholder="Product Name" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="jOX-ZT-A3g">
-                                        <rect key="frame" x="8" y="10" width="176" height="30"/>
-                                        <constraints>
-                                            <constraint firstAttribute="height" constant="30" id="Evj-on-C2O"/>
-                                        </constraints>
-                                        <color key="textColor" red="0.97774057540000003" green="0.97774057540000003" blue="0.97774057540000003" alpha="1" colorSpace="calibratedRGB"/>
-                                        <fontDescription key="fontDescription" type="system" pointSize="24"/>
-                                        <textInputTraits key="textInputTraits"/>
-                                    </textField>
-                                    <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" placeholder="Price (Aprox.)" textAlignment="right" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="Zbx-02-Oqi">
-                                        <rect key="frame" x="192" y="10" width="120" height="30"/>
-                                        <constraints>
-                                            <constraint firstAttribute="width" constant="120" id="1U5-xt-dxB"/>
-                                            <constraint firstAttribute="height" constant="30" id="KCS-Rp-oSF"/>
-                                        </constraints>
-                                        <color key="textColor" red="0.97774057540000003" green="0.97774057540000003" blue="0.97774057540000003" alpha="1" colorSpace="calibratedRGB"/>
-                                        <fontDescription key="fontDescription" type="system" pointSize="22"/>
-                                        <textInputTraits key="textInputTraits" keyboardType="decimalPad"/>
-                                    </textField>
-                                </subviews>
-                                <color key="backgroundColor" red="0.0" green="0.0" blue="0.0" alpha="0.5" colorSpace="calibratedRGB"/>
-                                <constraints>
-                                    <constraint firstAttribute="trailing" secondItem="Zbx-02-Oqi" secondAttribute="trailing" constant="8" id="Ppn-jB-UnS"/>
-                                    <constraint firstItem="jOX-ZT-A3g" firstAttribute="leading" secondItem="QMD-oO-359" secondAttribute="leading" constant="8" id="UtC-Fa-xX9"/>
-                                    <constraint firstAttribute="centerY" secondItem="jOX-ZT-A3g" secondAttribute="centerY" id="eLy-Mi-c8R"/>
-                                    <constraint firstAttribute="centerY" secondItem="Zbx-02-Oqi" secondAttribute="centerY" id="lni-2h-I9p"/>
-                                    <constraint firstItem="Zbx-02-Oqi" firstAttribute="leading" secondItem="jOX-ZT-A3g" secondAttribute="trailing" constant="8" id="mIw-Aj-oT4"/>
-                                    <constraint firstAttribute="height" constant="50" id="yrn-Xy-5C9"/>
-                                </constraints>
-                            </view>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="f52-nF-WKP">
-                                <rect key="frame" x="8" y="198" width="141" height="21"/>
-                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                                <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
-                                <nil key="highlightedColor"/>
-                            </label>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="top" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="MWy-V5-4T8">
-                                <rect key="frame" x="0.0" y="64" width="320" height="150"/>
+                                <rect key="frame" x="0.0" y="64" width="600" height="150"/>
                                 <inset key="contentEdgeInsets" minX="0.0" minY="20" maxX="0.0" maxY="0.0"/>
                                 <state key="normal" title="Select an image">
                                     <color key="titleColor" white="0.33333333333333331" alpha="1" colorSpace="calibratedWhite"/>
@@ -449,10 +410,10 @@
                                 </connections>
                             </button>
                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="R0L-mQ-T4v">
-                                <rect key="frame" x="0.0" y="264" width="320" height="304"/>
+                                <rect key="frame" x="0.0" y="264" width="600" height="336"/>
                                 <subviews>
                                     <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="eJH-gj-McE">
-                                        <rect key="frame" x="53" y="137" width="215" height="30"/>
+                                        <rect key="frame" x="193" y="153" width="215" height="30"/>
                                         <constraints>
                                             <constraint firstAttribute="width" constant="215" id="MGc-ab-KXq"/>
                                             <constraint firstAttribute="height" relation="greaterThanOrEqual" constant="30" id="MaZ-km-UhN"/>
@@ -474,21 +435,65 @@
                                     <constraint firstAttribute="centerY" secondItem="eJH-gj-McE" secondAttribute="centerY" id="cIS-W5-0Sc"/>
                                 </constraints>
                             </view>
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="QMD-oO-359">
+                                <rect key="frame" x="0.0" y="214" width="600" height="50"/>
+                                <subviews>
+                                    <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" placeholder="Product Name" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="jOX-ZT-A3g">
+                                        <rect key="frame" x="8" y="10" width="456" height="30"/>
+                                        <constraints>
+                                            <constraint firstAttribute="height" constant="30" id="Evj-on-C2O"/>
+                                        </constraints>
+                                        <color key="textColor" red="0.97774057540000003" green="0.97774057540000003" blue="0.97774057540000003" alpha="1" colorSpace="calibratedRGB"/>
+                                        <fontDescription key="fontDescription" type="system" pointSize="24"/>
+                                        <textInputTraits key="textInputTraits"/>
+                                        <connections>
+                                            <outlet property="delegate" destination="lGO-gd-hbl" id="2vA-Pa-IfP"/>
+                                        </connections>
+                                    </textField>
+                                    <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" placeholder="Price (Aprox.)" textAlignment="right" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="Zbx-02-Oqi">
+                                        <rect key="frame" x="472" y="10" width="120" height="30"/>
+                                        <constraints>
+                                            <constraint firstAttribute="width" constant="120" id="1U5-xt-dxB"/>
+                                            <constraint firstAttribute="height" constant="30" id="KCS-Rp-oSF"/>
+                                        </constraints>
+                                        <color key="textColor" red="0.97774057540000003" green="0.97774057540000003" blue="0.97774057540000003" alpha="1" colorSpace="calibratedRGB"/>
+                                        <fontDescription key="fontDescription" type="system" pointSize="22"/>
+                                        <textInputTraits key="textInputTraits" keyboardType="decimalPad"/>
+                                        <connections>
+                                            <outlet property="delegate" destination="lGO-gd-hbl" id="C7u-jV-4xQ"/>
+                                        </connections>
+                                    </textField>
+                                </subviews>
+                                <color key="backgroundColor" red="0.0" green="0.0" blue="0.0" alpha="0.5" colorSpace="calibratedRGB"/>
+                                <constraints>
+                                    <constraint firstAttribute="trailing" secondItem="Zbx-02-Oqi" secondAttribute="trailing" constant="8" id="Ppn-jB-UnS"/>
+                                    <constraint firstItem="jOX-ZT-A3g" firstAttribute="leading" secondItem="QMD-oO-359" secondAttribute="leading" constant="8" id="UtC-Fa-xX9"/>
+                                    <constraint firstAttribute="centerY" secondItem="jOX-ZT-A3g" secondAttribute="centerY" id="eLy-Mi-c8R"/>
+                                    <constraint firstAttribute="centerY" secondItem="Zbx-02-Oqi" secondAttribute="centerY" id="lni-2h-I9p"/>
+                                    <constraint firstItem="Zbx-02-Oqi" firstAttribute="leading" secondItem="jOX-ZT-A3g" secondAttribute="trailing" constant="8" id="mIw-Aj-oT4"/>
+                                    <constraint firstAttribute="height" constant="50" id="yrn-Xy-5C9"/>
+                                </constraints>
+                            </view>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="f52-nF-WKP">
+                                <rect key="frame" x="8" y="198" width="141" height="21"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
+                                <nil key="highlightedColor"/>
+                            </label>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                         <constraints>
                             <constraint firstItem="d5n-Jd-hFT" firstAttribute="leading" secondItem="1kl-y6-Q3R" secondAttribute="leadingMargin" constant="-16" id="3d9-yW-p9W"/>
-                            <constraint firstItem="Ade-pS-9f3" firstAttribute="top" secondItem="d5n-Jd-hFT" secondAttribute="bottom" id="4YJ-BG-tuK"/>
                             <constraint firstItem="R0L-mQ-T4v" firstAttribute="leading" secondItem="1kl-y6-Q3R" secondAttribute="leadingMargin" constant="-16" id="8g9-qi-36o"/>
                             <constraint firstItem="MWy-V5-4T8" firstAttribute="top" secondItem="tG0-Iq-iAj" secondAttribute="bottom" id="KKt-ez-M1v"/>
                             <constraint firstAttribute="trailingMargin" secondItem="QMD-oO-359" secondAttribute="trailing" constant="-16" id="Sgx-lJ-x7p"/>
                             <constraint firstAttribute="trailingMargin" secondItem="d5n-Jd-hFT" secondAttribute="trailing" constant="-16" id="TOV-ue-Mfg"/>
-                            <constraint firstItem="d5n-Jd-hFT" firstAttribute="bottom" secondItem="QMD-oO-359" secondAttribute="bottom" id="UHO-hh-6fB"/>
                             <constraint firstItem="Ade-pS-9f3" firstAttribute="top" secondItem="R0L-mQ-T4v" secondAttribute="bottom" id="aqO-QM-y9B"/>
                             <constraint firstAttribute="trailingMargin" secondItem="R0L-mQ-T4v" secondAttribute="trailing" constant="-16" id="av8-hc-bb3"/>
-                            <constraint firstItem="R0L-mQ-T4v" firstAttribute="top" secondItem="QMD-oO-359" secondAttribute="bottom" id="kUX-5q-u9t"/>
+                            <constraint firstItem="R0L-mQ-T4v" firstAttribute="top" secondItem="d5n-Jd-hFT" secondAttribute="bottom" id="cNo-C8-zuJ"/>
                             <constraint firstItem="QMD-oO-359" firstAttribute="top" secondItem="MWy-V5-4T8" secondAttribute="bottom" id="lWA-Q1-1Fu"/>
                             <constraint firstAttribute="trailingMargin" secondItem="MWy-V5-4T8" secondAttribute="trailing" constant="-16" id="mcB-91-aij"/>
+                            <constraint firstItem="QMD-oO-359" firstAttribute="bottom" secondItem="d5n-Jd-hFT" secondAttribute="bottom" id="moW-pI-HId"/>
                             <constraint firstItem="d5n-Jd-hFT" firstAttribute="top" secondItem="tG0-Iq-iAj" secondAttribute="bottom" id="qnY-sj-joi"/>
                             <constraint firstItem="MWy-V5-4T8" firstAttribute="leading" secondItem="1kl-y6-Q3R" secondAttribute="leadingMargin" constant="-16" id="qoI-Zq-5aY"/>
                             <constraint firstItem="QMD-oO-359" firstAttribute="leading" secondItem="1kl-y6-Q3R" secondAttribute="leadingMargin" constant="-16" id="sUT-j5-ORC"/>
@@ -496,9 +501,6 @@
                         <variation key="default">
                             <mask key="subviews">
                                 <exclude reference="f52-nF-WKP"/>
-                            </mask>
-                            <mask key="constraints">
-                                <exclude reference="4YJ-BG-tuK"/>
                             </mask>
                         </variation>
                     </view>
@@ -509,8 +511,9 @@
                             </connections>
                         </barButtonItem>
                     </navigationItem>
-                    <simulatedScreenMetrics key="simulatedDestinationMetrics" type="retina4"/>
                     <connections>
+                        <outlet property="bottomConstraint" destination="moW-pI-HId" id="dGx-UQ-KVq"/>
+                        <outlet property="descriptionView" destination="QMD-oO-359" id="DnU-6b-Mce"/>
                         <outlet property="pickedImage" destination="d5n-Jd-hFT" id="fKj-dN-vuQ"/>
                         <outlet property="productName" destination="jOX-ZT-A3g" id="tKw-SQ-Ab0"/>
                         <outlet property="productPrice" destination="Zbx-02-Oqi" id="ENq-5N-nPk"/>
@@ -519,7 +522,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="gbR-PA-vTx" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="1842" y="1187"/>
+            <point key="canvasLocation" x="1852" y="1302"/>
         </scene>
         <!--Navigation Controller-->
         <scene sceneID="qb6-xj-b4T">
