--- a/Pilot this/Base.lproj/Main.storyboard
+++ b/Pilot this/Base.lproj/Main.storyboard
@@ -453,6 +453,7 @@
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                         <constraints>
+                            <constraint firstItem="R0L-mQ-T4v" firstAttribute="top" secondItem="QMD-oO-359" secondAttribute="bottom" id="1nY-9x-4Ms"/>
                             <constraint firstItem="d5n-Jd-hFT" firstAttribute="leading" secondItem="1kl-y6-Q3R" secondAttribute="leadingMargin" constant="-16" id="3d9-yW-p9W"/>
                             <constraint firstItem="R0L-mQ-T4v" firstAttribute="leading" secondItem="1kl-y6-Q3R" secondAttribute="leadingMargin" constant="-16" id="8g9-qi-36o"/>
                             <constraint firstItem="MWy-V5-4T8" firstAttribute="top" secondItem="tG0-Iq-iAj" secondAttribute="bottom" id="KKt-ez-M1v"/>
@@ -463,7 +464,6 @@
                             <constraint firstItem="R0L-mQ-T4v" firstAttribute="top" secondItem="d5n-Jd-hFT" secondAttribute="bottom" id="cNo-C8-zuJ"/>
                             <constraint firstItem="QMD-oO-359" firstAttribute="top" secondItem="MWy-V5-4T8" secondAttribute="bottom" id="lWA-Q1-1Fu"/>
                             <constraint firstAttribute="trailingMargin" secondItem="MWy-V5-4T8" secondAttribute="trailing" constant="-16" id="mcB-91-aij"/>
-                            <constraint firstItem="QMD-oO-359" firstAttribute="bottom" secondItem="d5n-Jd-hFT" secondAttribute="bottom" id="moW-pI-HId"/>
                             <constraint firstItem="d5n-Jd-hFT" firstAttribute="top" secondItem="tG0-Iq-iAj" secondAttribute="bottom" id="qnY-sj-joi"/>
                             <constraint firstItem="MWy-V5-4T8" firstAttribute="leading" secondItem="1kl-y6-Q3R" secondAttribute="leadingMargin" constant="-16" id="qoI-Zq-5aY"/>
                             <constraint firstItem="QMD-oO-359" firstAttribute="leading" secondItem="1kl-y6-Q3R" secondAttribute="leadingMargin" constant="-16" id="sUT-j5-ORC"/>
@@ -482,7 +482,7 @@
                         </barButtonItem>
                     </navigationItem>
                     <connections>
-                        <outlet property="bottomConstraint" destination="moW-pI-HId" id="dGx-UQ-KVq"/>
+                        <outlet property="bottomConstraint" destination="1nY-9x-4Ms" id="JzO-4h-bVN"/>
                         <outlet property="descriptionView" destination="QMD-oO-359" id="DnU-6b-Mce"/>
                         <outlet property="pickedImage" destination="d5n-Jd-hFT" id="fKj-dN-vuQ"/>
                         <outlet property="productName" destination="jOX-ZT-A3g" id="tKw-SQ-Ab0"/>
